Grease Pencil Fill Tool not working on super-simple closed area #102625

Closed
opened 2022-11-19 20:09:31 +01:00 by Len White · 11 comments

System Information
Operating system: macOS-12.6-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.8.101

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-15 05:43, hash: 2a41cd46ba
Worked: (newest version of Blender that worked as expected)

Short description of error
I have intermittent inability to fill simple shapes that appear completely gap-free and closed. There appears to be no set of steps to fix the issue when it occurs.

Exact steps for others to reproduce the error

  • Open attached blend file.
  • Switch to Draw Mode
  • Make sure the layer Fills is selected
  • Choose the Fill tool.
  • Choose the Solid Fill material
  • Attempt to fill the single elongated "s" shape on frame 1.
  • For me: No fill successful. Reports "Unable to fill unclosed areas"
  • Try different settings of Gap Closure, zoom level, or anything else. Same error.
  • Check all points on shape: They seem fine to me.
    Grease_Pencil_Test_File1.blend
**System Information** Operating system: macOS-12.6-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.8.101 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-15 05:43, hash: `2a41cd46ba` Worked: (newest version of Blender that worked as expected) **Short description of error** I have intermittent inability to fill simple shapes that appear completely gap-free and closed. There appears to be no set of steps to fix the issue when it occurs. **Exact steps for others to reproduce the error** - Open attached blend file. - Switch to Draw Mode - Make sure the layer **Fills** is selected - Choose the **Fill** tool. - Choose the **Solid Fill** material - Attempt to fill the single elongated "s" shape on frame 1. - For me: No fill successful. Reports "Unable to fill unclosed areas" - Try different settings of Gap Closure, zoom level, or anything else. Same error. - Check all points on shape: They seem fine to me. [Grease_Pencil_Test_File1.blend](https://archive.blender.org/developer/F13946899/Grease_Pencil_Test_File1.blend)
Author

Added subscriber: @LenWhite

Added subscriber: @LenWhite

Added subscriber: @antoniov

Added subscriber: @antoniov

The problem of your file is that your ignore transparent value is 1.0. If you change to 0.1 it will work.

image.png

Anyway, I have seen is not clear this option and if you disable the value would be not used.

The problem of your file is that your `ignore transparent` value is 1.0. If you change to 0.1 it will work. ![image.png](https://archive.blender.org/developer/F13947414/image.png) Anyway, I have seen is not clear this option and if you disable the value would be not used.
Antonio Vazquez self-assigned this 2022-11-19 23:00:06 +01:00

Added subscriber: @mendio

Added subscriber: @mendio

@mendio I think we need review this panel because the ignore transparent and the factor has some problem in the UI.

@mendio I think we need review this panel because the ignore transparent and the factor has some problem in the UI.
Author

Thank you so much for the solution! The UI is definitely confusing.

Thank you so much for the solution! The UI is definitely confusing.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

@mendio I have changed the code to ignore the transparent only if the checkbox is enabled. The old code was doing the check of the transparency when the checkbox was disabled, so I think now is working as expected.

@mendio I have changed the code to ignore the transparent only if the checkbox is enabled. The old code was doing the check of the transparency when the checkbox was disabled, so I think now is working as expected.

IMHO we can close the report with the last commit. In the next version we can consider redesign these two options of the fill tool.

IMHO we can close the report with the last commit. In the next version we can consider redesign these two options of the fill tool.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102625
No description provided.