GPencil: Make Ignore Transparent option more consistent

The code was doing the oposite of the UI option.

Related to T102625